[metadata]
name = timeflux-influx
description = A Timeflux plugin for influxdb
author = MMBOX - Team Systems
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = timeflux, influxdb

[options]
packages = find:
install_requires =
    timeflux>=0.5.3
    influxdb>=5.3.0

[options.extras_require]
dev =
    pytest>=5.3
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    setuptools_scm

[build_sphinx]
warning-is-error = 1
