[metadata]
name = timeflux-influx
version = 1.0
description = A Timeflux plugin for influxdb
author = MMBOX - Team Systems
license = MIT
keywords = timeflux, influxdb

[options]
packages = find:
install_requires =
    timeflux>=0.5.3
    influxdb>=5.3.0

[options.extras_require]
dev =
    pytest>=5.3
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    setuptools_scm
